# rag-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  rag.py  requirements.txt
.github/workflows/: ci.yml
prompts/: qa.txt
src/: chain.py  embeddings.py  indexer.py  retriever.py
tests/: test_indexer.py  test_retriever.py
