[project]
name = "rag-cli"
version = "0.1.0"
description = "Chat with any PDF from the terminal using RAG, LangChain, FAISS, and Groq"
requires-python = ">=3.11"
dependencies = [
    "langchain-groq>=0.1.0",
    "langchain-community>=0.2.0",
    "langchain-huggingface>=0.0.3",
    "langchain-text-splitters>=0.2.0",
    "faiss-cpu>=1.7.4",
    "pypdf>=4.0.0",
    "sentence-transformers>=2.2.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
rag = "rag:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
